apps/generic/overlays/searxng/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  template:
    spec:
      containers:
        - name: container
          image: searxng/searxng:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /etc/searxng
              subPath: configs/searxng/
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 512Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
