apps/generic/overlays/searxng/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
